# miniscope-firmware

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  README.md
.github/workflows/: ci.yml  hil.yml
boards/blinky_board/: board.c  board.h  board_config.cmake  main.c
boards/board_common/: board_common.h
boards/grand_central_m4/: board.c  board.h  board_config.cmake
boards/wirefree_v4/: board.c  board.h  board_config.cmake  samd51j20a_flash.ld
cmake/: arm-gcc-toolchain.cmake  docs.cmake  samd51.cmake  tinyusb.cmake  version.cmake
cmake/tinyusb_compat/: sam.h
docs/: getting-started.md
firmware/common/: CMakeLists.txt
firmware/common/include/: encode_8b10b.h  fw_common.h  fw_config.h.in  fw_version.h.in
firmware/common/src/: encode_8b10b.c  fw_version.c
firmware/samd51/blinky/: CMakeLists.txt
firmware/samd51/blinky/include/: blinky_config.h
firmware/samd51/blinky/src/: app_blinky.c
firmware/samd51/common/: CMakeLists.txt
firmware/samd51/common/include/: hal_adc.h  hal_clock.h  hal_cycle_count.h  hal_delay.h  hal_dmac.h  hal_eic.h  hal_gpio.h  hal_i2c_bitbang.h  hal_sercom_uart.h  hal_systick.h  hal_tc.h  hal_usb_cdc.h  tusb_config.h  tusb_dfp_v3_compat.h
firmware/samd51/common/src/: hal_adc.c  hal_clock.c  hal_eic.c  hal_i2c_bitbang.c  hal_sercom_uart.c  hal_systick.c  hal_tc.c  hal_usb_cdc.c  usb_descriptors.c  usb_irq_handlers.c
firmware/samd51/miniscope/: CMakeLists.txt
firmware/samd51/miniscope/include/: app.h  battery_monitor.h  debug_output.h  ewl_driver.h  ir_receiver.h  led_control.h  miniscope_buffer.h  miniscope_config.h  miniscope_state.h  pcc_capture.h  sd_format.h  sd_raw.h  sensor_naneye.h  sensor_python480.h  spi_output.h
firmware/samd51/miniscope/src/: app_miniscope.c  battery_monitor.c  debug_output.c  ewl_driver.c  ir_receiver.c  led_control.c  main.c  miniscope_buffer.c  miniscope_state.c  pcc_capture.c  sd_format.c  sd_raw.c  sensor_naneye.c  sensor_python480.c  spi_output.c
scripts/: fetch_deps.sh  fetch_test_deps.sh  flash_openocd.sh  new_board.sh
tests/host/: CMakeLists.txt  test_app_blinky.c  test_encode_8b10b.c  test_miniscope_buffer.c  test_miniscope_state.c  test_sd_format.c
tests/host/mocks/: fw_config.h  fw_version.h  hal_gpio.h  hal_systick.h  hal_usb_cdc.h  mock_hal.c  sam.h
tools/: gen_8b10b_lut.c
